[tool.poetry]
name = "empiric"
version = "1.4.10"
description = "Empiric, the leading Oracle on zkRollups."
authors = ["0xevolve <support@astraly.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.13"
cairo-lang = "0.10.3"
pytest = "^7.0"
pytest-asyncio = "^0.19"
typing_extensions = "4.3.0"
"starknet.py" = "0.13.0a0"
boto3 = "^1.26"
pytest-xdist = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
build = "^0.10.0"
twine = "^4.0.2"
typer = "0.6.1"
starknet-devnet = "0.4.3"
cairo-nile = "0.12.0"
vulture = "2.7"
autoflake = "^2.0.0"

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
empiric-network = {path="./empiric-package/", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
