[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "empiric-network"
version = "1.6.7"
authors = ["Pragma <contact@pragmaoracle.com>"]
description = "Core package for rollup-native Pragma Oracle"
readme = "README.md"
homepage = "https://pragmaoracle.com"
repository = "https://github.com/Astraly-Labs/Pragma"
documentation = "https://docs.pragmaoracle.com"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
  {include = "empiric"},
  {include = "core", from = "empiric"},
  {include = "publisher", from = "empiric"},
  {include = "test", from = "empiric"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
"starknet.py" = "^0.16"
cairo-lang = "^0.11"
typer = "0.6.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"

[tool.poetry.scripts]
interface-check = "empiric.test.interface_consistency:main"
