[flake8]
max-line-length = 88
extend-ignore = E203,E501

[tool.black]
line-length = 88

[metadata]
name = empiric-network
version = 0.8.0
author = Jonas Nelle
author_email = jonas.a.nelle@gmail.com
description = Core package for zk-native Empiric Network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/42labs/Empiric
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = empiric,empiric.admin,empiric.core,empiric.publisher,empiric.publisher.fetch,empiric.test
python_requires = >=3.7,<3.10
install_requires = 
	starknet.py==0.4.1a0
	ecdsa==0.17.*
	fastecdsa==2.2.*
	cairo-lang==0.9.1
