[flake8]
max-line-length = 88
extend-ignore = E203,E501

[tool.black]
line-length = 88

[metadata]
name = empiric-network
version = 1.0.0-rc1
author = Jonas Nelle
author_email = jonas.a.nelle@gmail.com
description = Core package for zk-native Empiric Network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/42labs/Empiric
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = empiric,empiric.core,empiric.core.abis,empiric.core.mixins,empiric.publisher,empiric.publisher.fetchers,empiric.test
python_requires = >=3.9,<3.10
install_requires = 
	starknet.py==0.5.2a0
	ecdsa==0.17.*
	fastecdsa==2.2.*
	cairo-lang==0.10.0
	typer==0.6.1
