[flake8]
max-line-length = 88
extend-ignore = E203,E501

[tool.black]
line-length = 88

[metadata]
name = empiric-network
version = 1.3.1
author = 42 Labs
author_email = jonas@42labs.xyz
description = Core package for rollup-native Empiric Network
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/42labs/Empiric
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = empiric,empiric.core,empiric.core.abis,empiric.core.mixins,empiric.publisher,empiric.publisher.fetchers,empiric.test,empiric.cli,empiric.cli.contracts,empiric.cli.publisher,empiric.cli.randomness
python_requires = >=3.9,<3.10
install_requires = 
	starknet.py==0.10.2a0
	cairo-lang==0.10.2
	typer==0.6.1
