[flake8]
max-line-length = 88
extend-ignore = E203,E501

[tool.black]
line-length = 88

[metadata]
name = pontis
version = 0.4.2
author = Jonas Nelle
author_email = jonas.a.nelle@gmail.com
description = Core package for Pontis oracle on Starknet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/42labs/Pontis
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = pontis.admin,pontis.core,pontis.publisher
python_requires = ==3.7.*
install_requires = 
	starknet.py
	ecdsa
	fastecdsa
	cairo-lang